[package]
name = "explonz_bnd"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
axum = { version = "0.8.4" , features = ["macros"]}
serde = { version = "1.0.225", features = ["derive"] }
serde_json = { version = "1.0.145" }
#dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "chrono"] }
tracing = {version = "0.1.41", features = ["async-await"]}
config = {version = "0.15.18", features = ["yaml"]}
anyhow = "1.0.100"
sea-orm = {version =  "1.1.17", features = ["with-chrono", "debug-print", "sqlx-postgres", "with-rust_decimal", "runtime-tokio"] }
num_cpus = "1.17.0"
thiserror = "2.0.17"
tower-http = { version = "0.6.6", features = ["trace", "timeout", "limit", "cors", "normalize-path", "auth"] }
xid = "1.1.1"
bytesize = "2.1.0"
http = "1.3.1"
validator = { version = "0.20.0" , features = ["derive"]}
axum-valid = {version = "0.24.0", features = ["full_validator"]}
regex = "1.12.2"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
bcrypt = "0.17.1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.11.0"
hex = "0.4"
reqwest = { version = "0.13.4", features = ["json"] }
